--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div>Combined data:
     <button onclick="show_visits_with_bee_labels_table()">Visits with Bee Information</button>
     <button onclick="show_video_frame()">Video Frame with Flowers</button>
+    <button onclick="show_flowerpatch_visualization()">Flowerpatch Visualization</button>
     </div>
 
     <div id="msg"></div>
