--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="show_visits_table()">
+<body onload="show_flowerpatch_visualization()">
     <!-- Add HTML content, SVG drawing area, ... -->
     
     <!-- D3 bundle -->
@@ -15,23 +15,7 @@
     <!-- Our JS code -->
     <!-- <script src="js/main.js"></script> -->
     <script src="js/main.js"></script>
-
-    <h1>DEMO BEE VISUALIZATION</h1>
-
-    <div>Flowerpatch dataset tables:
-    <button onclick="show_visits_table()">Visits</button>
-    <button onclick="show_flowers_table()">Flowers</button>
-    <button onclick="show_bee_labels_table()">Bee Labels</button>
-    <button onclick="show_detections_table()">Detections (full tracks)</button>
-
-    </div>
-    <div>Combined data:
-    <button onclick="show_visits_with_bee_labels_table()">Visits with Bee Information</button>
-    <button onclick="show_video_frame()">Video Frame with Flowers</button>
-    <button onclick="show_flowerpatch_visualization()">Flowerpatch Visualization</button>
-    </div>
-
-    <div id="msg"></div>
+    <script src="js/heatmap.js"></script>
 
     <div id="main"></div>
 </body>
