--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>D3 Project Starter Template</title>
+    <title>Bee & Flower Visits Visualization</title>
     <meta charset="UTF-8">
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
     <link rel="stylesheet" href="css/style.css">
+    <style>
+      .bar {
+        fill: rgba(33, 30, 194, 0.904);
+      }
+      .bar.highlight {
+        fill: orange;
+      }
+      .axis-label {
+        font-size: 12px;
+        font-weight: bold;
+      }
+    </style>
 </head>
-<body onload="show_visits_table()">
-    <!-- Add HTML content, SVG drawing area, ... -->
-    
-    <!-- D3 bundle -->
-    <script src="js/d3.v6.min.js"></script>
+<body>
+  <h1>Bee & Flower Visits Visualization</h1>
+  <div>
+    <h2>Flower Chart</h2>
+    <svg id="flowerChart" width="800" height="400"></svg>
+  </div>
+  <div>
+    <h2>Bee Chart</h2>
+    <svg id="beeChart" width="800" height="400"></svg>
+  </div>
+  <div style="height: 120px;"></div> <!-- Add this for extra space -->
 
-    <!-- Our JS code -->
-    <!-- <script src="js/main.js"></script> -->
-    <script src="js/main.js"></script>
+  <!-- D3 bundle (make sure this is loaded BEFORE your chart_bar.js) -->
+  <script src="js/d3.v6.min.js"></script>
+  <!-- Your chart code -->
+  <script src="js/chart_bar.js"></script>
 
-    <h1>DEMO BEE VISUALIZATION</h1>
 
-    <div>Flowerpatch dataset tables:
-    <button onclick="show_visits_table()">Visits</button>
-    <button onclick="show_flowers_table()">Flowers</button>
-    <button onclick="show_bee_labels_table()">Bee Labels</button>
-    <button onclick="show_detections_table()">Detections (full tracks)</button>
-
-    </div>
-    <div>Combined data:
-    <button onclick="show_visits_with_bee_labels_table()">Visits with Bee Information</button>
-    <button onclick="show_video_frame()">Video Frame with Flowers</button>
-    </div>
-
-    <div id="msg"></div>
-
-    <div id="main"></div>
+  <!-- If you need main.js, load it last -->
+  <script src="js/main.js"></script>
 </body>
 </html>
