--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     <div>Combined data:
     <button onclick="show_visits_with_bee_labels_table()">Visits with Bee Information</button>
     <button onclick="show_video_frame()">Video Frame with Flowers</button>
-    </div>
+ 	<button onclick="show_barchart()">Bar Chart</button> 
+  	<button onclick="show_chronogram()">Chronogram</button> 
+	<button onclick="show_patchview()">Patch View</button> 
+
+	</div>
 
     <div id="msg"></div>
 
