preprocessing steps for refactored barchart code

--- a/index.html
+++ b/index.html
@@ -28,14 +28,31 @@
     <div>Combined data:
     <button onclick="show_visits_with_bee_labels_table()">Visits with Bee Information</button>
     <button onclick="show_video_frame()">Video Frame with Flowers</button>
- 	<button onclick="show_barchart()">Bar Chart</button> 
-  	<button onclick="show_chronogram()">Chronogram</button> 
-	<button onclick="show_patchview()">Patch View</button> 
+ 	<button onclick="show_visualization()">Visualization</button> 
 
 	</div>
 
     <div id="msg"></div>
 
     <div id="main"></div>
+
+	<div class="container">
+		<div>
+			<h2>Chronogram</h2>
+			<div id="chronogram"></div>
+		</div>
+		<div>
+			<h2>Flowerpatch View</h2>
+			<div id="patchview"></div>
+		</div>
+		<div>
+			<h2>Bee Chart</h2>	
+			<div id="bee_bar"></div>
+		</div>
+		<div>
+			<h2>Flower Chart</h2>
+			<div id="flower_bar"></div>
+		</div>
+	</div>
 </body>
 </html>
