implemented first version of the gallery. 1 picture per bee

--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
     <div id="msg"></div>
 
     <div id="main"></div>
-	<div id="main2"></div>
 
 	<div class="container">
 		<div id="chronogram"></div>
 		<div id="patchview"></div>
-		<div id="bee_bar"></div>
-		<div id="flower_bar"></div>
+		<div id="gallery"></div>
+		<div id="bar"></div>
 	</div>
 </body>
 </html>
