--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<h1>DEMO BEE VISUALIZATION</h1>
 
-    <div>Flowerpatch dataset tables:
+<!--    <div>Flowerpatch dataset tables:
     <button onclick="show_visits_table()">Visits</button>
     <button onclick="show_flowers_table()">Flowers</button>
     <button onclick="show_bee_labels_table()">Bee Labels</button>
@@ -33,25 +33,28 @@
     <div>Combined data:
     <button onclick="show_visits_with_bee_labels_table()">Visits with Bee Information</button>
     <button onclick="show_video_frame()">Video Frame with Flowers</button>
-<!--	<button onclick="show_barcharts()">Bar Charts</button> -->
-<!--	<button onclick="show_chronogram()">Chronogram</button> -->
-<!--	<button onclick="show_patchview()">Flowerpatch View</button> -->
+	<button onclick="show_barcharts()">Bar Charts</button>
+	<button onclick="show_chronogram()">Chronogram</button>
+	<button onclick="show_patchview()">Flowerpatch View</button>
  	<button onclick="show_visualization()">Visualization</button>
 
 	</div>
 
     <div id="msg"></div>
 
-    <div id="main"></div>
+    <div id="main"></div> -->
 
 	<div class="container">
-<!--		<div class="row">
-			<div class="column"> -->
+		<div class="row">
+			<div class="column">
 				<div id="chronogram" class="visDiv"></div>
-				<div id="bar" class="visDiv"></div>	
 				<div id="gallery" class="visDiv"></div>
-<!--			</div> -->
-			<div id="patchview" class="visDiv"></div>
-<!--		</div> -->
+				<div id="bar" class="visDiv"></div>	
+			</div>
+			<div class="column">
+				<div id="patchview" class="visDiv"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
