--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 	<script src="js/gallery.js"></script>
     <script src="js/patchview.js"></script>
  
-
 	<h1>DEMO BEE VISUALIZATION</h1>
 
 <!--    <div>Flowerpatch dataset tables:
@@ -44,6 +43,7 @@
 
     <div id="main"></div> -->
 
+<!--	<button onclick="show_gallery_demo()">Gallery Demo</button> -->
 	<div class="container">
 		<div class="row">
 			<div class="column">
