All finishing summer changes and added curves to the lines (Not fully working)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="js/gallery.js"></script>
     <script src="js/patchview.js"></script>
  
-	<h1>DEMO BEE VISUALIZATION</h1>
+	<h1 style='margin-bottom:0;'>DEMO BEE VISUALIZATION</h1>
 
 <!--    <div>Flowerpatch dataset tables:
     <button onclick="show_visits_table()">Visits</button>
@@ -43,7 +43,6 @@
 
     <div id="main"></div> -->
 
-<!--	<button onclick="show_gallery_demo()">Gallery Demo</button> -->
 	<div class="container">
 		<div class="row">
 			<div class="column">
