Reswitched back to min.js. Added fixed join dataframe logic

--- a/index.html
+++ b/index.html
@@ -6,42 +6,24 @@
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="show_visualization()">
+<body>
     <!-- Add HTML content, SVG drawing area, ... -->
-    
-    <!-- D3 bundle -->
-    <script src="js/d3.v6.min.js"></script>
 
+	<!-- D3 bundle -->
+	<script src="js/d3.v7.min.js"></script>
+	
+	<!-- JQuery bundle -->
+	<script src="js/jquery-3.7.1.min.js"></script>
+    
     <!-- Our JS code -->
-    <!-- <script src="js/main.js"></script> -->
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
+<!--	
 	<script src="js/chronogram.js"></script>
     <script src="js/barchart.js"></script>
 	<script src="js/gallery.js"></script>
     <script src="js/patchview.js"></script>
- 
-	<h1 style='margin-bottom:0;'>DEMO BEE VISUALIZATION</h1>
-
-<!--    <div>Flowerpatch dataset tables:
-    <button onclick="show_visits_table()">Visits</button>
-    <button onclick="show_flowers_table()">Flowers</button>
-    <button onclick="show_bee_labels_table()">Bee Labels</button>
-    <button onclick="show_detections_table()">Detections (full tracks)</button>
-
-    </div>
-    <div>Combined data:
-    <button onclick="show_visits_with_bee_labels_table()">Visits with Bee Information</button>
-    <button onclick="show_video_frame()">Video Frame with Flowers</button>
-	<button onclick="show_barcharts()">Bar Charts</button>
-	<button onclick="show_chronogram()">Chronogram</button>
-	<button onclick="show_patchview()">Flowerpatch View</button>
- 	<button onclick="show_visualization()">Visualization</button>
-
-	</div>
-
-    <div id="msg"></div>
-
-    <div id="main"></div> -->
+ -->
+	<h1 class="exp_title" style='margin-bottom:0;'>DEMO BEE VISUALIZATION</h1>
 
 	<div class="container">
 		<div class="row">
